--- a/frontend/src/core/TopBar.css
+++ b/frontend/src/core/TopBar.css
@@ -16,9 +16,9 @@
     font-size: 15px !important;
 }
 
-.sign-out{
+.sub-menu{
     font-size: 15px !important;
-    color: white !important;
+    color: black !important;
     cursor: pointer;
 }
 
