big update: use ReduxToolkit, change material-ui to ant-design, update cart-ui, modify TopBar, up host database, convert to vietnamese, fix  performence, fix some bugs

--- a/frontend/src/core/SingleProduct.css
+++ b/frontend/src/core/SingleProduct.css
@@ -1,27 +1,3 @@
-.name{
-    color: blue;
-    font-weight: bold;
-}
-
-.price, .sold , .quantity, .description{
-    font-size: 20px;
-    font-weight:bold
-}
-.price span{
-     color: red;
-    font-weight: normal;
-    font-size: 40px;
-}
-
-.sold span, .quantity span{
-    color: blue;
-    font-weight: normal;
-}
-
-.description-content{
-text-align: justify;
-}
-
 .delivery-available{
     color: green;
 }
@@ -35,4 +11,26 @@ text-align: justify;
     color: white;
     padding: 2px 10px;
     border-radius: 20px;
+}
+
+.product-price{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.product-quantity{
+    font-size: 20px;
+    color: thistle
+}
+
+.adjust-quantity{
+    margin-top: 100px;
+    margin-left: 10px;
+}
+.shipping-available{
+    color: green;
+}
+
+.shipping-unavailable{
+    color: red;
 }
