--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,22 @@
 .ul-custom{
    list-style-type: none;
 }
+
+@font-face {
+ font-family:'UTMAvo';
+ src:url('./fonts/UTM Avo.ttf') format('truetype');
+ font-weight:normal;
+ font-style:normal;
+}
+body {
+  font-family: 'UTMAvo'!important;
+  margin-top: 150px !important;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
